# ai-lead-magnet

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yaml  justfile  package.json  pyproject.toml  renovate.json
.claude/: CLAUDE.md
.github/workflows/: _build.yml  _ci.yml  _deploy.yml  _publish.yml  main.yml  pr.yml  release.yml  staging.yml
admin/: .env.example  Dockerfile  eslint.config.js  index.html  package.json  vite.config.ts
admin/config/: entrypoint-dev.sh  entrypoint-dist.sh  nginx.conf
admin/src/: App.tsx  index.css  main.tsx  types.ts
admin/src/components/: CompanyForm.tsx  IcpScoreBadge.tsx  ResultsTable.tsx  StatusLog.tsx
admin/src/hooks/: useCompanyList.ts
admin/src/pages/: ResultPage.tsx
app/: api_main.py
app/agents/company_list/: agent.py  route.py
app/alembic/: env.py
app/alembic/versions/: 1746489600_a1b2c3d4e5f6_initial_schema.py
app/core/: database.py  http.py  logging.py  pinecone_client.py  scala_api.py  settings.py  snowflake.py
app/gate/: models.py  service.py
docs/: spec.md
docs/agents/: 01-company-list.md  02-sales-business-plan.md  03-best-campaigns.md  04-meeting-prep.md  05-cold-email-review.md
tests/: conftest.py  test_agent_utils.py  test_company_list_route.py  test_gate_service.py
