[project]
name = "ai-lead-magnet"
version = "0.1.0"
description = "Public-facing AI lead magnet tools for getscalability.io"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13.0",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "ddtrace>=2.0.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pinecone>=6.0.0",
    "snowflake-connector-python>=3.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.0",
    "sse-starlette>=2.0.0",
    "structlog>=25.5.0",
    "tldextract>=5.3.1",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "ty>=0.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 30

[tool.coverage.report]
fail_under = 50

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A005",   # stdlib-module-shadowing
    "ARG001", # unused-function-argument (FastAPI deps)
    "ARG002", # unused-method-argument
    "COM812", # missing-trailing-comma, conflicts with formatter
    "D10",    # undocumented-*
    "D203",   # one-blank-line-before-class, conflicts with D211
    "D213",   # multi-line-summary-second-line, conflicts with D212
    "EM101",  # raw-string-in-exception
    "EM102",  # f-string-in-exception
    "ERA001", # commented-out-code
    "ISC001", # single-line-implicit-string-concatenation, conflicts with formatter
    "TC001",  # typing-only-first-party-import
    "TC002",  # typing-only-third-party-import
    "TC003",  # typing-only-standard-library-import
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
    "TRY003", # raise-vanilla-args
]

[tool.ruff.lint.isort]
case-sensitive = true
force-sort-within-sections = true
lines-after-imports = 2
order-by-type = false
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"app/alembic/*" = [
    "INP001",  # implicit-namespace-package (Alembic convention)
]
"app/agents/company_list/agent.py" = [
    "S608",  # parameterized placeholders %(key_N)s are safe; not user-controlled
]
"app/api_main.py" = [
    "E501",  # embedded HTML/CSS/JS strings exceed 100 chars by design
]
"scripts/*" = [
    "INP001",
    "T201",    # print
]
"tests/*" = [
    "PLC0415", # import-outside-top-level
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    "S106",    # possible-hardcoded-password (test tokens)
    "SLF001",  # private-member-access
]
